log
Thu 18 Aug 2022 02:02:23 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:5: error: ‘lista’ undeclared (first use in this function)
   32 |     lista->inicio=NULL;
      |     ^~~~~
list.c:32:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a878d49
